# todo_list_rs

./: .env  .gitattributes  Cargo.toml  LICENSE  README.md
backend/: .env  Cargo.toml  diesel.toml
backend/migrations/2024-09-05-235353_create_posts/: down.sql  up.sql
backend/migrations/2024-09-08-003829_init/: down.sql  up.sql
backend/src/: main.rs  schema.rs
backend/src/auth/: jwt.rs  login_api.rs  login_models.rs  login_ops.rs  recover_ops.rs
backend/src/database/: conec.rs
backend/src/todo/: todo_api.rs  todo_models.rs  todo_ops.rs
backend/src/utils/: email.rs
frontend/: .env  Cargo.toml  index.html  style.css  trunk.toml
frontend/src/: api.rs  main.rs  routes.rs
frontend/src/assets/components/: box_todo_edit.rs  btn_generic.rs  btn_genric_small.rs  btn_new_task.rs  btn_new_todo.rs  calendar.rs  menu_hamburger.rs  page_footer.rs  page_header.rs
frontend/src/assets/pages/: authentication.rs  home.rs  todos.rs
src/: main.rs  schema.rs
src/database/: conec.rs
src/database/migrations/: up.sql
src/todo/: todo_api.rs  todo_models.rs  todo_ops.rs
